Added all isos references on bibliography and text and all document revised. numer of figures, quotes, etc. First version of related work on frameworks and standards closed

--- a/refs.bib
+++ b/refs.bib
@@ -81,17 +81,13 @@
 }
 
 @article{McNeillis01112005,
-author = {McNeillis, Paul}, 
-title = {Three good questions},
-volume = {47}, 
-number = {6}, 
-pages = {14-15}, 
-year = {2005}, 
-doi = {10.1093/itnow/bwi114}, 
-abstract ={Customers have a way of asking good questions. Of course, a lot of them are difficult ones and the results of trying to answer them can be quite amusing and informative. By sharing with you some of the more difficult questions I have been asked as head of professional services at BSI I hope to give you an insight into some useful approaches to getting the full business benefit from your standards.}, 
-URL = {http://itnow.oxfordjournals.org/content/47/6/14.abstract}, 
-eprint = {http://itnow.oxfordjournals.org/content/47/6/14.full.pdf+html}, 
-journal = {ITNOW} 
+  author = {McNeillis, Paul}, 
+  title = {Three good questions},
+  volume = {47}, 
+  number = {6}, 
+  pages = {14-15}, 
+  year = {2005}, 
+  journal = {ITNOW} 
 }
 
 @article{ITGovAndMech,
@@ -103,3 +99,136 @@ journal = {ITNOW}
   year={2004},
   publisher={INFORMATION SYSTEMS AUDIT AND CONTROL ASSOCIATION}
 }
+
+@article{hill2006combine,
+  title={Combine ITIL and COBIT to meet business challenges},
+  author={Hill, Peter and Turbitt, Ken},
+  journal={BMC Software},
+  year={2006}
+}
+
+
+@techreport{ISO12207,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Systems and software engineering -- Software life cycle processes},
+ number = {12207-1:2008},
+ Type = {ISO},
+ Year = {2008}
+ }
+
+@techreport{ISO15288,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Systems and software engineering -- System life cycle processes},
+ number = {15288:2008},
+ Type = {ISO/IEC},
+ Year = {2008}
+ }
+
+ @techreport{ISO15504,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Process assessment},
+ number = {15504:2003},
+ Type = {ISO/IEC},
+ Year = {2003}
+ }
+
+@techreport{ISO20000-1,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Service management -- Part 1: Service management system requirements},
+ number = {20000-1:2011},
+ Type = {ISO/IEC},
+ Year = {2011}
+ }
+
+@techreport{ISO20000-2,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Service management -- Part 2: Guidance on the application of service management systems},
+ number = {20000-2:2012},
+ Type = {ISO/IEC},
+ Year = {2012}
+ }
+
+@techreport{ISO20000-3,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Service management -- Part 3: Guidance on scope definition and applicability of ISO/IEC 20000-1},
+ number = {20000-3:2012},
+ Type = {ISO/IEC},
+ Year = {2012}
+ }
+
+@techreport{ISO20000-4,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Service management -- Part 4: Process reference model},
+ number = {20000-4:2010},
+ Type = {ISO/IEC},
+ Year = {2010}
+ }
+
+@techreport{ISO20000-5,
+ author = {ISO/IEC},
+ Institution = {International Organization for Standardization and International Electrotechnical Commission},
+ Title = {Information technology -- Service management -- Part 5: Exemplar implementation plan for ISO/IEC 20000-1},
+ number = {20000-5:2013},
+ Type = {ISO/IEC},
+ Year = {2013}
+ }
+
+@techreport{ISO31000,
+ author = {ISO},
+ Institution = {International Organization for Standardization},
+ Title = {Risk management -- Principles and guidelines},
+ number = {31000:2009},
+ Type = {ISO},
+ Year = {2009}
+ }
+
+@techreport{IEC31010,
+ author = {IEC},
+ Institution = {International Electrotechnical Commission},
+ Title = {Risk management -- Risk assessment techniques},
+ number = {31010:2009},
+ Type = {IEC},
+ Year = {2009}
+ }
+
+@techreport{ISO27000,
+ author = {ISO},
+ Institution = {International Organization for Standardization},
+ Title = {Information technology -- Security techniques -- Information security management systems -- Overview and vocabulary},
+ number = {27000:2014},
+ Type = {ISO},
+ Year = {2014}
+ }
+
+@techreport{ISO19011,
+ author = {ISO},
+ Institution = {International Organization for Standardization},
+ Title = {Guidelines for auditing management systems},
+ number = {19011:2011},
+ Type = {ISO},
+ Year = {2011}
+ }
+
+@article{cmmi,
+  title={CMMI{\textregistered} for Development, Version 1.3, Improving processes for developing better products and services},
+  author={Team, CMMI Product},
+  journal={no. CMU/SEI-2010-TR-033. Software Engineering Institute},
+  year={2010}
+}
+
+@book{cobit4,
+  title={COBIT{\textregistered} 4.1: Framework, Control Objectives, Management Guidelines, Maturity Models},
+  author={Institute, I.T.G.},
+  isbn={9781933284729},
+  year={2007},
+  publisher={IT Governance Institute}
+}
+
+
