--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -6,7 +6,7 @@
 
 \section{Introduction}
 
-Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.\par
+As stated in ITIL V3 Service Strategy Volume, ``Information Technology (IT) enable, enhance, and are embedded in a growing number of goods and services. They are connecting consumers and producers of services in ways previously not feasible, while contributing to the productivity of numerous sectors of the services industry such as financial services, communications, insurance, and retail services.\cite{itilSS}''\par
 Currently, organizations moved from the limited perspective of profitability to a more wider view of the business, trying to maximize the business performance by increasing client satisfaction, products quality and management efficiency in comparison with the concurrency.\par
 Management on information systems is all about leadership, organizational structures and processes that ensure information systems support and alignment with organization's objectives. Information systems provide a competitive edge to concurrents, but an organization can only achieve management efficiency with well defined and matured processes. \par
 One important aspect for an organization take advantage of its concurrency is the way how it deals with receipt and categorization of project and maintenance requests. There is a inherent necessity to classify a new request in terms of opportunities  and value to the business as well as the risk associated with it, making it an important asset for the organization.\par
@@ -16,5 +16,5 @@ Considering the state of the art, COBIT assumes a major position on good practic
 For a more technical approach, oriented to IT services, we have ITIL V3, consisting in a good practices manual for managing IT services, during its life cycle. ITIL is divided in five volumes, comprising all the life cycle of IT services: service Strategy, service design, service transition, service operation and service continual improvement,\par
 PMBOK is the project management guide widely accepted by professionals from all areas of knowledge. It explores the processes that make part of the project life cycle, presenting them in a general way to all areas, making it universally applicable.\par
 Assuming the project management and maintenance management as the main focus areas for this project, we need to take in account the project portfolio aspects of the organization. It corresponds to a centralized management of processes, methods and technology, used by project managers and project management offices to analyze and manage a set of projects.\par
-We can have two distinct approaches for this project. One approach is dealing with the problem considering the process necessary for receiving and managing an project or a maintenance operation, considering we have already defined all aspects related to project portfolio. The other approach is to consider also the alignment of this process with the business and technological goals of the organization for creating value. We will need to analyze the state of the art in addition with the expectations of the client to decide which approach will we assume. This will be presented in section X.\par
-This document is divided into the problem definition in section X, where we define the problem scope in more detail, in the state of the art in project and maintenance management in section X, taking as reference the manuals presented before and a set of standards, and a first approach to the solution to adopt in section X,  achieved through interview method with the client in order to define some concrete aspects of the project.
+We can have two distinct approaches for this project. One approach is dealing with the problem considering the process necessary for receiving and managing an project or a maintenance operation, considering we have already defined all aspects related to project portfolio. The other approach is to consider also the alignment of this process with the business and technological goals of the organization for creating value. We will need to analyze the state of the art in addition with the expectations of the client to decide which approach will we assume. This will be presented in section 7.\par
+This document is divided into three main sections: The problem contextualization on section 3, a state of the art in frameworks for project and maintenance management, as well as in market solutions for project and portfolio management and IT service Management, in sections 4, 5 and 6 and a first approach to the solution's architecture in section 7. This first approach to the solution's architecture intents to make an overview of the processes to include on project and maintenance management and analyze the impact of the frameworks and standards studied in section 4 and 5 to help in the process design.
