--- a/sections/related-work.tex
+++ b/sections/related-work.tex
@@ -8,14 +8,14 @@
 \section{A State of the Art in Frameworks for Information Technology Governance and Management}
 
 % Example citation:
-In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a frameworks or a set of them to implement our processes for project and maintenance management.\par
-Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, providing processes for achieving a successful implementation of this principles in an organization.
+In this section we will present a set of literature references on the subjects related to this project. We will present the most important frameworks on Information Systems Management and Governance with the objective of coming up with a choice of a framework or a set of them to implement our processes for project and maintenance management.\par
+Our choice is centered in three frameworks we consider the most relevant for this project: COBIT 5, ITIL V3 and PMBOK. This three frameworks provide, from different perspectives, guides and principles for IT Governance and Management, presenting processes for achieving a successful implementation of this principles in an organization.
 
 \subsection{IT Governance and IT Management}
 
 One important concept to define is the difference between IT Governance and IT management. They are many times confused and some authors already tried to explain the difference between the two concepts.\par
-Considering the definition given by Van Grembergen \textit{et al.}, ``''IT Management is focused on the internal effective supply of IT services and products and the management of present IT operations. IT Governance in turn is much broader, and concentrates on performing and transforming IT to meet present and future demands of the business (internal focus) and the business' customers (external focus).``''.\par
- Considering the COBIT 5 view for this question, it makes a clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. it sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives.￼On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.\par
+Considering the definition given by Van Grembergen \textit{et al.}, ``IT Management is focused on the internal effective supply of IT services and products and the management of present IT operations. IT Governance in turn is much broader, and concentrates on performing and transforming IT to meet present and future demands of the business (internal focus) and the business' customers (external focus).''.\par
+ Considering the COBIT 5 view for this question, there is a ``clear distinction between governance and management, in the way these two disciplines encompass different types of activities, require different organizational structures and serve different purposes. Governance ensures that stakeholders' needs, conditions and options are evaluated to determine balanced, agreed-on enterprise objectives to be achieved. it sets direction through prioritisation and decision making and monitors performance and compliance against agreed-on direction and objectives.￼On the other hand, management plans, builds, runs and monitors activities in alignment with the direction set by the governance body to achieve the enterprise objectives.''\cite{2012cobit}\par
 
 \begin{figure}
 \centering
@@ -29,7 +29,7 @@ Considering the definition given by Van Grembergen \textit{et al.}, ``''IT Manag
 \subsection{COBIT 5}
 
 Control Objectives for Information and Related Technology (COBIT) is a framework created by the Information Systems Audit and Control Association (ISACA) for IT Management and IT Governance.\par
-COBIT 5 provides a comprehensive framework that assists enterprises in achieving their objectives for the governance and management of enterprise IT. Simply stated, it helps enterprises create optimal value from IT by maintaining a balance between realizing benefits and optimizing risk levels and resource use \cite{2012cobit}. The framework is built on five basic principles:
+As stated by ISACA,``COBIT 5 provides a comprehensive framework that assists enterprises in achieving their objectives for the governance and management of enterprise IT. Simply stated, it helps enterprises create optimal value from IT by maintaining a balance between realizing benefits and optimizing risk levels and resource use'' \cite{2012cobit}. The framework is built on five basic principles:
 
 \begin{itemize}
   \item Meeting the Stakeholders Needs 
@@ -68,8 +68,8 @@ Figure 2 presents the COBIT 5 enablers previous defined and how they relate amon
 
 Considering figure 3, COBIT 5 process reference model considers two big domains of processes: Governance and Management. The governance domain contains five processes in the domain Evaluate, Direct and Monitor(EDM). The management domain has four internal domains of processes: Align, Plan and Organise(APO), Build, Acquire and Implement(BAI), Deliver, Service and Support (DSS) and Monitor, Evaluate and Assess(MEA).\par
 All processes for management and governance are presented in the appendix and all the implementation details explained in COBIT 5: Enabling Processes, A detailed reference guide to the processes defined in the COBIT 5 process reference model. This includes the COBIT 5 goals cascade, a process model explanation, governance and management practices, and the process reference model\cite{2012cobitEP}.\par
-COBIT 5 includes a process capability model based on ISO/IEC 15504 Software Engineering - Process Assessment standard. [REFERENCE HERE] This model allow to measure the current level of maturity of enterprise processes, presenting the gap between the current level and the desired one the enterprise wants to achieve. This new capability model is an improvement of the previous on COBIT 4.1, being more simplified and compliant with a generally accepted process assessment standard.\par
-Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3, ISO/IEC 20000, PMBOK and CMMI, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
+COBIT 5 includes a process capability model based on ISO/IEC 15504 Software Engineering - Process Assessment standard.\cite{ISO15504} This model allow to measure the current level of maturity of enterprise processes, presenting the gap between the current level and the desired one the enterprise wants to achieve. This new capability model is an improvement of the previous on COBIT 4.1 \cite{cobit4}, being more simplified and compliant with a generally accepted process assessment standard.\par
+Relating to other frameworks and standards, COBIT tries to establish a framework that is compliant with the most widely accepted standards in IT governance and management. In figure 4 we can see the standards COBIT 5 relates by processes domain, with special attention to ITIL V3\cite{itilSS,itilSD,itilSO,itilST,itilCSI}, ISO/IEC 20000\cite{ISO20000-1}, PMBOK\cite{pmbok5} and CMMI\cite{cmmi}, that are closely related to this project's problem. This compliance with other standards is fundamental for a widely adoption of COBIT 5, in the way it tries to establish goals, metrics, practices, roles, inputs and outputs for each process, making it necessary being compliant with international standards. This will improve COBIT application and acceptance on organizations.\par
 
 \subsubsection{COBIT 5 critical analysis}
 
@@ -85,8 +85,8 @@ One important aspect of the use of COBIT is that it provides a more business and
 
 \subsection{ITIL V3}
 
-First developed in the 1980s by the actual Office of Government Commerce (OGC), a branch of the British Government, ITIL defines processes for IT Service management at a high level, being left to the organizations to implement the processes in the manner most suitable to their particular situations and needs.\par
-ITIL is becoming a de facto standard worldwide as organizations adopt it as their guideline for establishing IT service management (ITSM) processes. IT organizations can use the guidance provided by ITIL to transform their service management capabilities into strategic assets, those that provide the basis for core competence, distinctive performance, durable advantage, and qualifications to participate in business opportunities.\par
+First developed in the 1980s by the actual Office of Government Commerce (OGC), a branch of the British Government, ITIL defines processes for IT Service management at a high level. Each organization that intents to apply ITIL for service management should adapt and implement it in the most suitable manner to accomplish  particular objectives and needs.\cite{hill2006combine}\par
+On the last years, ITIL became an important standard worldwide for organizations as the guideline for IT service management (ITSM) processes. Its guidance can be used to transform service management capabilities into strategic assets, that will become fundamental to build distinctiveness to the concurrents and deliver services with higher performance and costumer satisfaction.\par
 The ITIL service management practices are comprised of three main sets of products and services: ITIL service management practices (core guidance), ITIL service management practices (guidance specific to industry sectors, organization types, operating models and technology architectures) and ITIL web support services.\par
 
 \begin{figure}
@@ -99,7 +99,7 @@ The core set, presented in figure 5 and the one we will consider for this projec
 
 \subsubsection{Service Strategy} 
 
-Service Stategy volume provides guidance on how to view service management not only as an organizational capability but as a strategic asset. Guidance is provided on the principles underpinning the practice of service management which are useful for developing service management policies, guidelines and processes across the ITIL Service Lifecycle.\cite{itilSS} The processes included in Service Strategy volume are:
+Service Strategy volume provides guidance on achieving strategic assets by improving actual service management capabilities. It presents principles for service management that are important for developing and implementing service management policies, guidelines and processes across the ITIL Service Life cycle.\cite{itilSS} The processes included in Service Strategy volume are:
 
 \begin{itemize}
   \item Financial Management
@@ -107,9 +107,9 @@ Service Stategy volume provides guidance on how to view service management not o
   \item Demand Management
 \end{itemize}
 
-\subsubsection{Service Design} 
+\subsubsection{Service Design}
 
-Service Design volume provides guidance for the design and development of services and service management practices. It covers design principles and methods for converting strategic objectives into portfolios of services and service assets. The scope of Service Design is not limited to new services. It includes the changes and improvements necessary to increase or maintain value to customers over the life cycle of services, the continuity of services, achievement of service levels, and conformance to standards and regulations.\cite{itilSD} The processes included in Service Design volume are:
+Service Design volume provides guidance for the design and development of services and service management practices. As stated on this volume, ``It covers design principles and methods for converting strategic objectives into portfolios of services and service assets. The scope of Service Design is not limited to new services. It includes the changes and improvements necessary to increase or maintain value to customers over the life cycle of services, the continuity of services, achievement of service levels, and conformance to standards and regulations.''\cite{itilSD} The processes included in Service Design volume are:
 
 \begin{itemize}
   \item Service Catalogue Management
@@ -126,7 +126,7 @@ Service Design volume provides guidance for the design and development of servic
 
 \subsubsection{Service Transition} 
 
-Service Transition volume provides guidance for the development and improvement of capabilities for transitioning new and changed services into live service operation. This publication provides guidance on how the requirements of Service Strategy encoded in Service Design are effectively realized in Service Operation while controlling the risks of failure and disruption.\cite{itilST} The processes included in Service Transition volume are:
+Service Transition volume provides guidance for implementing and improve processes for transitioning services in developing or maintaining operations into live service operation. As stated in this volume, ``This publication provides guidance on how the requirements of Service Strategy encoded in Service Design are effectively realized in Service Operation while controlling the risks of failure and disruption.''\cite{itilST} The processes included in Service Transition volume are:
 
 \begin{itemize}
   \item Change Management
@@ -140,7 +140,7 @@ Service Transition volume provides guidance for the development and improvement 
 
 \subsubsection{Service Operation} 
 
-Service Operation volume embodies practices in the management of the day-to-day operation of services. It includes guidance on achieving effectiveness and efficiency in the delivery and support of services to ensure value for the customer and the service provider. Strategic objectives are ultimately realized through Service Operation, therefore making it a critical capability. Guidance is provided on how to maintain stability in service operations, allowing for changes in design, scale, scope and service levels.\cite{itilSO} The processes included in Service Operation volume are:
+Service Operation volume presents practices and operations needed to deal with the day-to-day operation of services that are already in live service operation. Pretends to guide on the effectiveness and efficiency achievement on delivering and supporting services, ensuring that it creates value for the customer and for the organization. It is a fundamental capability because is directly connected with IT management and organization's strategic objectives . As stated in the volume, ``Guidance is provided on how to maintain stability in service operations, allowing for changes in design, scale, scope and service levels.''\cite{itilSO} The processes included in Service Operation volume are:
 
 \begin{itemize}
   \item Event Management
@@ -152,14 +152,14 @@ Service Operation volume embodies practices in the management of the day-to-day 
 
 \subsubsection{Continual Service Improvement}
 
-Continual Service Improvement volume provides instrumental guidance in creating and maintaining value for customers through better design, transition and operation of services. It combines principles, practices and methods from quality management, change management and capability improvement. Organizations learn to realize incremental and large-scale improvements in service quality, operational efficiency and business continuity. Guidance is provided for linking improvement efforts and outcomes with service strategy, design and transition.\cite{itilST} The processes included in Continual Service Improvement volume are:
+As explained in the Continual Service Improvement volume, it ``provides instrumental guidance in creating and maintaining value for customers through better design, transition and operation of services. It combines principles, practices and methods from quality management, change management and capability improvement. Organizations learn to realize incremental and large-scale improvements in service quality, operational efficiency and business continuity.''\cite{itilST} This volume also pretends to link service improvement with the guidelines expressed in all other volumes, making it cover the all service life cycle. The processes included in Continual Service Improvement volume are:
 
 \begin{itemize}
   \item The 7-Step Improving Process
   \item Service Level Management
 \end{itemize} 
 
-\par Not different from COBIT,  ITIL takes public frameworks and standards as a form of the organization to have advantage on the market. Organizations should build their proprietary knowledge on top of a body of knowledge based on public frameworks and standards. Collaboration and coordination across organizations are easier because of shared practices and standards. According to a research performed by the UK Department of Trade and Industry (DTI), the value to the UK economy from standards is estimated to be about \textsterling2.5 billion per annum \cite{McNeillis01112005}.\par
+\par Not different from COBIT,  ITIL takes public frameworks and standards as a form of the organization to have advantage on the market. Organizations should build their proprietary knowledge considering  all the knowledge provided by public frameworks and standards. In addition with this, collaboration and coordination between organizations became easier due to a set of shared practices and standards. According to a research performed by the UK Department of Trade and Industry (DTI), the value to the UK economy from standards is estimated to be about \textsterling2.5 billion per annum \cite{McNeillis01112005}.\par
 For related standards and frameworks to ITIL V3, we have ISO/IEC 20000 (service management system standards), ISO/IEC 27001 (standard providing requirements for an information security management system), PMBOK (manual for a set of standard terminology and guidelines for project management)\cite{pmbok5} and COBIT\cite{2012cobit}, already presented. This are the standards we will cover for our project by being directly related to ITIL V3 and its implementation.
 
 
@@ -170,8 +170,8 @@ The main objective to include ITIL knowledge for this project is to provide a co
 
 \subsection{PMBOK: A Guide to the Project Management Book of Knowledge}
 
-The Guide to the Project Management Body of Knowledge provides guidelines for managing individual projects and defines project management related concepts. It also describes the project management life cycle and its related processes, as well as the project life cycle.\cite{pmbok5}\par
-This guide is considered by many professionals in the area of business management as the main reference for processes and good practices in project management, in the way it defines the knowledge that are applicable to most project most of the time, and there is consensus about their value and usefulness.\par 
+The Guide to the Project Management Body of Knowledge provides guidance on individual projects management and the concepts inherited to it. To achieve this, it presents the processes involved in the project management and project life cycle.\cite{pmbok5}\par
+This guide is considered by many professionals in all business management areas as the main reference for processes and good practices in project management, because it compiles a set of good practices that are applicable to most of the projects in most of the contexts, bringing value to all organizations and managers that use it as a reference.\par 
 The processes are presented relating them with the knowledge area they belong. The PMBOK presents the following areas of project management:
 
 \begin{itemize}
@@ -208,14 +208,14 @@ PMBOK presents processes for all phases of the life cycle of a project, being to
 \section{Relevant International Standards}
 
 In this section we will present the international standards that are referenced or important to complement the frameworks previously presented. These standards will allow us to design processes in conformance with practices that are considerer as the reference in some areas of project management.\par
-We will analyze the ISO/IEC 12207, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this project. It will provide an high-level process reference for the complete life cycle of a software system\par
-Relating to COBIT, we have standards that are directly related to it, as the ISO/IEC 20000, a set of international standards for IT service management, and ISO/IEC 27000, a set of international standards for information security management systems. COBIT also relates with CMMI, the Capability Maturity Model Integration that is a framework for process improvement in business comprising models, appraisal methods, and training.\par
-For other standards more general to all frameworks we will present the ISO 31000, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
+We will analyze the ISO/IEC 12207\cite{ISO12207}, an systems and software engineering international standard for Software life cycle processes. This standard will allow us to define the processes that are important to consider in the scope of this project. It will provide an high-level process reference for the complete life cycle of a software system\par
+Relating to COBIT, we have standards that are directly related to it, as the ISO/IEC 20000\cite{ISO20000-1,ISO20000-2,ISO20000-3,ISO20000-4,ISO20000-5}, a set of international standards for IT service management, and ISO/IEC 27000\cite{ISO27000}, a set of international standards for information security management systems. COBIT also relates with CMMI\cite{cmmi}, the Capability Maturity Model Integration that is a framework for process improvement in business comprising models, appraisal methods, and training.\par
+For other standards more general to all frameworks we will present the ISO 31000\cite{ISO31000,IEC31010}, a set of standards that provide principles, framework and a process for managing risk, and ISO 19011, a international standard for providing guidelines for auditing management systems. This standards will complement complex areas of project management providing some additional and specific knowledge.
 
 \subsection{ISO/IEC 12207}
 
-ISO/IEC 12207:2008 establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.The purpose of this International Standard is to provide a defined set of processes to facilitate communication among acquirers, suppliers and other stakeholders in the life cycle of a software product.\par
-This standard combines the processes to be performed during the life cycle of a software project into seven groups . Each process is described in terms of its objectives and expected results and presents activities to be undertaken to achieve these same objectives. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure XXX.
+As described by ISO/IEC 12207:2008, it ``establishes a common framework for software life cycle processes, with well-defined terminology, that can be referenced by the software industry. It contains processes, activities, and tasks that are to be applied during the acquisition of a software product or service and during the supply, development, operation, maintenance and disposal of software products.''.\cite{ISO12207} The main objective of this standard is to present standardized processes that will make easier the communication among all stakeholders in the software product life cycle.\par
+This standard groups the processes to be performed during the life cycle of a software project in seven groups . It presents, for each process, its objectives and expected results as well as the necessary activities to implement it. The processes are grouped in 7 groups, related to the phase they are applied during the software life cycle. All processes are listed in figure 7.
 
 \begin{itemize}
   \item Agreement processes
@@ -234,7 +234,7 @@ This standard combines the processes to be performed during the life cycle of a 
 \caption{ISO/IEC 12207 processes}
 \end{figure}
 
-This standard may be used standalone or jointly with ISO/IEC 15288, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504, a set of technical standards documents for the computer software development processes assessment.\par
+It may be used standalone or jointly with ISO/IEC 15288\cite{ISO15288}, an international standard for system life cycle processes, and supplies a process reference model that supports process capability assessment in accordance with ISO/IEC 15504\cite{ISO15504}, a set of technical standards documents for the computer software development processes assessment.\par
 This standard is important for this project in the way it standardize the processes for the whole life cycle of the software, grouping the processes for a better understanding its scope. We will use this standard, specifically figure 7, to present the processes that make part of the scope of this project, after what we will relate them with the frameworks previously presented. 
 
 
@@ -243,15 +243,23 @@ This standard is important for this project in the way it standardize the proces
 ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was developed to reflect best practice guidance contained in some frameworks like ITIL, COBIT or Microsoft operations. This standard in composed by 5 parts:
 
 \begin{itemize}
-  \item \textbf{ISO/IEC 20000-1:2011} -  Corresponds to the most relevant part of the ISO/IEC 20000 standard. It specifies requirements for the service provider to plan, establish, implement, operate, monitor, review, maintain and improve an SMS. The requirements include the design, transition, delivery and improvement of services to fulfill agreed service requirements.\par
+  \item \textbf{ISO/IEC 20000-1:2011} -  Corresponds to the most relevant part of the ISO/IEC 20000 standard. It specifies requirements for the service provider to manage the whole system life cycle. Similar to the ITIL V3 view, the requirements include the design, transition, delivery and improvement of services to agree with the service requirements established.\cite{ISO20000-1}\par
+  
   \vspace{5mm}
-  \item \textbf{ISO/IEC 20000-2:2012} - Provides guidance on the application of service management systems (SMS) based on the requirements in ISO/IEC 20000-1. Enables organizations and individuals to interpret ISO/IEC 20000-1 more accurately, and therefore to use it more effectively. The guidance includes examples and suggestions to enable organizations to interpret and apply ISO/IEC 20000-1, including references to other parts of ISO/IEC 20000 and other relevant standards.\par
+  
+  \item \textbf{ISO/IEC 20000-2:2012} - Provides guidance on implementing Service management systems defined by the requirements of ISO/IEC 20000-1. As presented by ISO/IEC 20000-2, ``Enables organizations and individuals to interpret ISO/IEC 20000-1 more accurately, and therefore to use it more effectively. The guidance includes examples and suggestions to enable organizations to interpret and apply ISO/IEC 20000-1, including references to other parts of ISO/IEC 20000 and other relevant standards.''\cite{ISO20000-2}\par
+  
   \vspace{5mm}
-  \item \textbf{ISO/IEC 20000-3:2012} - Useful for service providers, consultants and assessors. It includes practical guidance on scope definition, applicability and demonstration of conformity to the requirements in ISO/IEC 20000-1. Guidance on the different types of conformity assessment and assessment standards is included.\par
+  
+  \item \textbf{ISO/IEC 20000-3:2012} - Used by service providers, consultants and assessors, provides guidance on scope definition, applicability and demonstration of conformity to ISO/IEC 20000-1 requirements specification. It also contains assessment standards.\cite{ISO20000-3}\par
   \vspace{5mm}
-  \item \textbf{ISO/IEC TR 20000-4:2010} - Facilitates the development of a process assessment model according to ISO/IEC 15504 process assessment principles. ISO/IEC 15504-1 describes the concepts and terminology used for process assessment. ISO/IEC 15504-2 describes the requirements for the conduct of an assessment and a measurement scale for assessing process capability.\par
+  
+  \item \textbf{ISO/IEC TR 20000-4:2010} - This standard acts as a facilitator for developing a process assessment model according to ISO/IEC 15504 process assessment principles. Related to ISO/IEC 15504, ISO/IEC 15504-1 describes the concepts and terminology used for process assessment and ISO/IEC 15504-2 describes the requirements for the conduct of an assessment and a measurement scale for assessing process capability.\cite{ISO20000-4}\par
+  
   \vspace{5mm}
-  \item \textbf{ISO/IEC TR 20000-5:2013} - Implementation plan providing guidance on how to implement a service management system (SMS) to fulfill the requirements of ISO/IEC 20000-1:2011. The intended users of ISO/IEC TR 20000-5:2013 are service providers, but it can also be useful for those advising service providers on how to implement an SMS.\par
+  
+  \item \textbf{ISO/IEC TR 20000-5:2013} - This standard presents an implementation plan on how to implement a service management system to fulfill the requirements of ISO/IEC 20000-1:2011. This standard is planned to be used by service providers but can also be used for his advisors to provide guidance on how to implement an service management system.\cite{ISO20000-5}\par
+  
   \vspace{5mm}
 
   This standard is a clear complement to the ITIL framework, providing a similar view for the framework previous presented but being more complete in terms of requirements identification and process assessment. ITIL lacks of a process assessment model and detailed implementation plans, being this standard a way to fulfill those problems.\par
@@ -264,8 +272,8 @@ ISO/IEC 20000 corresponds to a standard on IT Service Management. Initially was 
 
 \subsection{ISO 31000}
 
-ISO 31000 is a set of standards related to risk management. ISO 31000:2009, Risk management – Principles and guidelines, provides principles, framework and a process for managing risk. It can be used by any organization regardless of its size, activity or sector.Using ISO 31000 can help organizations increase the likelihood of achieving objectives, improve the identification of opportunities and threats and effectively allocate and use resources for risk treatment.\par
-In figure 8, we can observe the purposed framework by ISO 31000:2009, assisting the organization to integrate risk management into its overall management system. Many organizations have already frameworks for implementing risk management, that can be evaluated and reviewed against this international standard in order to check its adequacy. In figure 9 are presented the processes for Risk management implementation.\par
+ISO 31000 is a set of standards related to risk management. ISO 31000:2009, Risk management - Principles and guidelines, provides principles, framework and a process for managing risk. It can be used by any organization independently of its context of operation (size, sector, activity). As presented by this standard, ``Using ISO 31000 can help organizations increase the likelihood of achieving objectives, improve the identification of opportunities and threats and effectively allocate and use resources for risk treatment.''\cite{ISO31000}\par
+In figure 8, we can observe the purposed framework by ISO 31000:2009, used to implement risk management on the management system of the organization. Many organizations have already frameworks for implementing risk management, distinct from ISO 31000, but that can be evaluated and reviewed against this international standard in order to check its suitability. In figure 9 are presented the processes for Risk management implementation.\par
 
 \begin{figure}[h!]
 \centering
@@ -279,17 +287,17 @@ In figure 8, we can observe the purposed framework by ISO 31000:2009, assisting 
 \caption{ISO 31000:2009 Risk Management Processes}
 \end{figure}
 
-This standard cannot be used for certification purposes, in the way it doesn't provide guidance for internal or external audit programmes, but can be used to compare the risk management processes of the organization with international standard benchmarks.\par
-Risk management is a very complex area on project management. It is connected to the whole life cycle of a project and need to be controlled and assessed in many phases and by different forms. ISO/IEC 31010:2009, Risk management – Risk assessment techniques focuses on risk assessment. Risk assessment helps decision makers understand the risks that could affect the achievement of objectives as well as the adequacy of the controls already in place.\par
+As confirmed in this standard, it cannot be used for certification purposes, in the way it doesn't provide guidance for audit programmes, but can be used to compare the risk management processes of the organization with international standard benchmarks.\par
+Risk management is a very complex area on project management. It is connected to the whole life cycle of a project and need to be controlled and assessed in many phases and by different forms. IEC 31010:2009, Risk management - Risk assessment techniques focuses on risk assessment. Risk assessment helps organizations understand the risks that could jeopardize the achievement of management and governance goals as well as the suitability of the risk control activities already in place.\cite{IEC31010}\par
 The relevance of ISO 31000 for this project focuses on its orientation to an important and complex area of project and maintenance management, providing a framework for Risk management, as well as a set of processes to implement it. It is important to clearly define the scope of this standard related to this project, trying to reduce the complexity and increase its utility for the processes we pretend to design.
 
 
 \subsection{ISO 19011}
 
-This International Standard provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.\par
-In figure 10 is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for out project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
+As defined by this International Standard, ``ISO 19011 provides guidance on auditing management systems, including the principles of auditing, managing an audit programme and conducting management system audits, as well as guidance on the evaluation of competence of individuals involved in the audit process, including the person managing the audit programme, auditors and audit teams. It is applicable to all organizations that need to conduct internal or external audits of management systems or manage an audit programme.''\cite{ISO19011}\par
+In figure 10 is presented the process flow for the management of an audit programme, described in this international standard. This process can be specially important for our project if we pretend to introduce the auditing processes in the scope of the processes to design. We can use the process flow presented in figure 10 to help designing a auditing process.
 
-\begin{figure}[b!]
+\begin{figure}[t!]
 \centering
 \includegraphics[width=0.85\textwidth]{img/ISO19011AuditProcess.png}
 \caption{ISO 19011 process flow for the management of an audit programme}
